# parallel-15-practice

./: CMakeLists.txt  Makefile  README.md  glider.csv  main.cpp  makeall.sh
headers/: dbg.h  shell.h
include/: dbg.hpp  exceptions.hpp  life_game.h  life_game.hpp  life_game_interface.hpp  life_game_singlethreaded.hpp  shell.hpp  threading.hpp  utils.hpp
lib/include/: dbg.hpp  life_game_interface.hpp  life_game_singlethreaded.hpp  threading.hpp  utils.hpp
lib/src/: life_game_singlethreaded.cpp  shell.cpp  threading.cpp  utils.cpp
life-mpi1/include/: life_mpi.h  life_mpi.hpp
life-mpi1/src/: life_mpi.cpp  main.cpp
life-mpi2/src/: main.cpp
life-openmp/include/: life_game_openmp.hpp
life-openmp/src/: life_game_openmp.cpp  main.cpp
life-pthread/: README.md  glider.csv
life-pthread/include/: dbg.hpp  life_game.hpp
life-pthread/src/: main.cpp  threading.cpp
src/: life_game.cpp  life_game_singlethreaded.cpp  main.cpp  shell.cpp  threading.cpp  utils.cpp
src/tests/: mutex_test.cpp
